// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MainFrame /> should display the tooltip 1`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        European Union Population
      </p>
      <p
        class="data-vis-header-2"
      >
        2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          viewBox="0, 0, 100, 100"
          width="1000"
        >
          <g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.4163994815562835"
              >
                <title>
                  Austria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.857168748835214"
              >
                <title>
                  Belgium
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1323513150573024"
              >
                <title>
                  Bulgaria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.6312918085157004"
              >
                <title>
                  Croatia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0704370628854811"
              >
                <title>
                  Cyprus
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.723387132426279"
              >
                <title>
                  Czech Republic
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.902344520582533"
              >
                <title>
                  Denmark
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.148772370306415"
              >
                <title>
                  Estonia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8606176377784989"
              >
                <title>
                  Finland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="12.318373784068097"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  France
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  67,000,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="15"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Germany
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  82,800,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.753725101541634"
              >
                <title>
                  Greece
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.5905837873091295"
              >
                <title>
                  Hungary
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.736788720610928"
              >
                <title>
                  Ireland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="11.224509412488775"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Italy
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  60,600,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2566254628317801"
              >
                <title>
                  Latvia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.4092371442409357"
              >
                <title>
                  Lithuania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0255377253258264"
              >
                <title>
                  Luxembourg
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1"
              >
                <title>
                  Malta
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.8287549884763235"
              >
                <title>
                  Netherlands
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="7.380016956621445"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Poland
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  38,000,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.677618824780854"
              >
                <title>
                  Portugal
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="4.263376360392959"
              >
                <title>
                  Romania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8490663871508697"
              >
                <title>
                  Slovakia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2763063093811553"
              >
                <title>
                  Slovenia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="8.834420280524302"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Spain
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  46,500,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.6241717249436243"
              >
                <title>
                  Sweden
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="12.111689793123851"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  United Kingdom
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  65,800,000
                </text>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="data-vis-tooltip data-vis-tooltip--hover"
        >
          <div>
            <span>
              Austria
            </span>
            <br />
            <span>
              8,770,000
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        Source: https://ec.europa.eu/eurostat/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Copyright: https://ec.europa.eu/info/legal-notice_en
      </p>
    </div>
  </div>
</div>
`;

exports[`<MainFrame /> should display the tooltip 2`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        European Union Population
      </p>
      <p
        class="data-vis-header-2"
      >
        2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          viewBox="0, 0, 100, 100"
          width="1000"
        >
          <g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.4163994815562835"
              >
                <title>
                  Austria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.857168748835214"
              >
                <title>
                  Belgium
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1323513150573024"
              >
                <title>
                  Bulgaria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.6312918085157004"
              >
                <title>
                  Croatia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0704370628854811"
              >
                <title>
                  Cyprus
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.723387132426279"
              >
                <title>
                  Czech Republic
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.902344520582533"
              >
                <title>
                  Denmark
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.148772370306415"
              >
                <title>
                  Estonia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8606176377784989"
              >
                <title>
                  Finland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="12.318373784068097"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  France
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  67,000,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="15"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Germany
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  82,800,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.753725101541634"
              >
                <title>
                  Greece
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.5905837873091295"
              >
                <title>
                  Hungary
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.736788720610928"
              >
                <title>
                  Ireland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="11.224509412488775"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Italy
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  60,600,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2566254628317801"
              >
                <title>
                  Latvia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.4092371442409357"
              >
                <title>
                  Lithuania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0255377253258264"
              >
                <title>
                  Luxembourg
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1"
              >
                <title>
                  Malta
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.8287549884763235"
              >
                <title>
                  Netherlands
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="7.380016956621445"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Poland
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  38,000,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.677618824780854"
              >
                <title>
                  Portugal
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="4.263376360392959"
              >
                <title>
                  Romania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8490663871508697"
              >
                <title>
                  Slovakia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2763063093811553"
              >
                <title>
                  Slovenia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="8.834420280524302"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Spain
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  46,500,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.6241717249436243"
              >
                <title>
                  Sweden
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="12.111689793123851"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  United Kingdom
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  65,800,000
                </text>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="data-vis-tooltip"
        >
          <div>
            <span>
              Austria
            </span>
            <br />
            <span>
              8,770,000
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        Source: https://ec.europa.eu/eurostat/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Copyright: https://ec.europa.eu/info/legal-notice_en
      </p>
    </div>
  </div>
</div>
`;

exports[`<MainFrame /> should render correctly 1`] = `
<div
  className="data-vis-container"
>
  <div
    className="data-vis-header"
  >
    <p
      className="data-vis-header-1"
    >
      European Union Population
    </p>
    <p
      className="data-vis-header-2"
    >
      2017
    </p>
  </div>
  <div
    className="data-vis-body"
  >
    <div
      className="data-vis-chart"
      tabIndex={-1}
    />
  </div>
  <div
    className="data-vis-footer"
  >
    <p
      className="data-vis-footer-1"
    >
      Source: https://ec.europa.eu/eurostat/
    </p>
    <p
      className="data-vis-footer-2"
    >
      Copyright: https://ec.europa.eu/info/legal-notice_en
    </p>
  </div>
</div>
`;

exports[`<MainFrame /> should render correctly 2`] = `""`;

exports[`<MainFrame /> should render the svg element 1`] = `
<div>
  <div
    class="data-vis-container"
  >
    <div
      class="data-vis-header"
    >
      <p
        class="data-vis-header-1"
      >
        European Union Population
      </p>
      <p
        class="data-vis-header-2"
      >
        2017
      </p>
    </div>
    <div
      class="data-vis-body"
    >
      <div
        class="data-vis-chart"
        tabindex="-1"
      >
        <svg
          height="1000"
          viewBox="0, 0, 100, 100"
          width="1000"
        >
          <g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.4163994815562835"
              >
                <title>
                  Austria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.857168748835214"
              >
                <title>
                  Belgium
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.1323513150573024"
              >
                <title>
                  Bulgaria
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.6312918085157004"
              >
                <title>
                  Croatia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0704370628854811"
              >
                <title>
                  Cyprus
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.723387132426279"
              >
                <title>
                  Czech Republic
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.902344520582533"
              >
                <title>
                  Denmark
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.148772370306415"
              >
                <title>
                  Estonia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8606176377784989"
              >
                <title>
                  Finland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="12.318373784068097"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  France
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  67,000,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="15"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Germany
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  82,800,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.753725101541634"
              >
                <title>
                  Greece
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.5905837873091295"
              >
                <title>
                  Hungary
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.736788720610928"
              >
                <title>
                  Ireland
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="11.224509412488775"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Italy
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  60,600,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2566254628317801"
              >
                <title>
                  Latvia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.4092371442409357"
              >
                <title>
                  Lithuania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.0255377253258264"
              >
                <title>
                  Luxembourg
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1"
              >
                <title>
                  Malta
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="3.8287549884763235"
              >
                <title>
                  Netherlands
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="7.380016956621445"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Poland
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  38,000,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.677618824780854"
              >
                <title>
                  Portugal
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="4.263376360392959"
              >
                <title>
                  Romania
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.8490663871508697"
              >
                <title>
                  Slovakia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="1.2763063093811553"
              >
                <title>
                  Slovenia
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="8.834420280524302"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  Spain
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  46,500,000
                </text>
              </g>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="2.6241717249436243"
              >
                <title>
                  Sweden
                </title>
              </circle>
            </g>
            <g
              class="data-vis-group-circle"
            >
              <circle
                r="12.111689793123851"
              />
              <g>
                <text
                  class="data-vis-text-country"
                >
                  United Kingdom
                </text>
                <text
                  class="data-vis-text-population"
                  transform="translate(0,3)"
                >
                  65,800,000
                </text>
              </g>
            </g>
          </g>
        </svg>
        <div
          class="data-vis-tooltip"
        >
          <div />
        </div>
      </div>
    </div>
    <div
      class="data-vis-footer"
    >
      <p
        class="data-vis-footer-1"
      >
        Source: https://ec.europa.eu/eurostat/
      </p>
      <p
        class="data-vis-footer-2"
      >
        Copyright: https://ec.europa.eu/info/legal-notice_en
      </p>
    </div>
  </div>
</div>
`;
